bux fix: minor changes on mobile view

--- a/src/Components/Items/style.scss
+++ b/src/Components/Items/style.scss
@@ -12,7 +12,7 @@
     @media (max-width: 992px) {
        margin: 2%;
     }
-    @media (max-width: 400px) {
+    @media (max-width: 500px) {
         margin: 2%;
     }
 
@@ -48,7 +48,7 @@
             @media (max-width: 992px) {
                 width: 400px;
             }
-            @media (max-width: 400px) {
+            @media (max-width: 500px) {
                 width: 200px;
             }
         }
@@ -64,7 +64,7 @@
             @media (max-width: 992px) {
                 width: 400px;
             }
-            @media (max-width: 400px) {
+            @media (max-width: 500px) {
                 width: 200px;
             }
         }
